Criação dos botoes Cancelar e Pesquisar no menu de busca de filmes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="name">Name</string>
+    <string name="pesquisar">PESQUISAR</string>
+    <string name="cancelar">CANCELAR</string>
+    <string name="fabricante">Fabricante:</string>
 </resources>
