--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="please_enter_the_details_of_the_new_car">Please enter the details of the new car:</string>
     <string name="button">Button</string>
     <string name="gerir">GERIR</string>
+    <string name="cilindrada">Cilindrada</string>
 </resources>
 
